Add Pricing > Pro Trial page

--- a/docs/account.mdx
+++ b/docs/account.mdx
@@ -21,6 +21,8 @@ Accounts on different providers with matching emails are not automatically linke
 There are four Shuttle account tiers: Community, Pro, Growth, and Enterprise.
 Check the [Pricing page](https://www.shuttle.dev/pricing) for more information.
 
+Pro Trial is included by default at signup, find out more [here](https://www.shuttle.dev/pricing/pro-trial).
+
 ## API Key
 
 A Shuttle account has a single Shuttle API key.
