docs: Add instance_size example

--- a/pricing/scaling.mdx
+++ b/pricing/scaling.mdx
@@ -25,6 +25,10 @@ Simply upgrade your instance size and pay the difference. Each instance size com
 
 *For example, if you upgrade from Basic (0.25 vCPU) to Medium (1 vCPU), you'll only be charged for the additional 0.75 vCPU since 0.25 vCPU is included in your plan.*
 
+<Info>
+[Read the Scaling section to find out how to adjust vertical scaling](/docs/scaling)
+</Info>
+
 ## Horizontal scaling
 
 Growth tier users can configure a single project to run on multiple instances and have Shuttle seamlessly load balance traffic across them for higher scalability and availability. Each replica instance is billed based on its instance size and vCPU usage per hour.
