--- a/integrations/mcp-server.mdx
+++ b/integrations/mcp-server.mdx
@@ -1,40 +1,100 @@
 ---
-title: MCP server (Cursor)
-description: How to set up a Shuttle Docs MCP server for use in AI editors
+title: MCP server
+description: How to set up the Shuttle MCP server for use in AI coding assistants
 icon: sparkles
 ---
-Take your coding of Shuttle apps to the next level with an [MCP](https://modelcontextprotocol.io/introduction) server! Imagine having Shuttle's entire knowledge base directly integrated with your AI coding tools. That's exactly what the MCP server delivers.
 
+To make Rust development even better, we've built the Shuttle MCP server.
 
-## What’s this for?
+The Shuttle [MCP server](https://modelcontextprotocol.io/) brings our entire documentation and tooling ecosystem directly into your favorite AI coding assistant. Think of it as having a Shuttle expert sitting right next to you while you code.
 
-The MCP server is a lightweight local service that bridges your Shuttle apps with AI editors like Cursor. It feeds your editor contextual knowledge about Shuttle's source code and documentation, supercharging your development experience.
+## What's this for?
 
+The Shuttle MCP server supercharges your development workflow in two powerful ways:
 
-## Set up local MCP wrapper
+**Contextual Knowledge**: It acts as a bridge between Shuttle's comprehensive documentation and your AI coding assistant, providing instant access to Shuttle-specific guidance without leaving your editor. No more tab-switching between docs and code!
 
-Make sure you have [Node.js](https://nodejs.org/) installed.
+**Powerful Development Tools**: Beyond just documentation, the MCP server gives your AI agent direct access to Shuttle's tooling ecosystem. Your assistant can help you deploy services, fetch logs, manage resources, and interact with the Shuttle console - all through natural conversation. This makes Shuttle development significantly faster and more intuitive.
 
-Shuttle Docs uses [Mintlify](https://mintlify.com/), which provides an easy way to run a local MCP server. Run this to set it up.
+## Prerequisites
+
+Before we dive in, you'll need to set up Rust's nightly toolchain since the Shuttle MCP server uses some cutting-edge features:
 
 ```sh
-npx mint-mcp add shuttle
+rustup toolchain install nightly
+rustup default nightly
 ```
 
-## Add to Cursor
+## Installation
 
-To use the MCP server in [Cursor](https://www.cursor.com/) ([docs](https://docs.cursor.com/context/model-context-protocol)), adapt the command from the previous step and add it to Cursor's config:
+Once you have nightly set up, installing the Shuttle MCP server is straightforward:
 
-```json
+```sh
+cargo install shuttle-mcp
+```
+
+That's it! The server is now ready to connect to your preferred AI coding environment.
+
+## IDE Setup
+
+Choose your preferred AI coding environment and add the Shuttle MCP server configuration:
+
+<CodeGroup>
+
+```json Cursor
 {
   "mcpServers": {
     "shuttle": {
-      "command": "node",
-      "args": ["/home/user/.mcp/shuttle/src/index.js"]
+      "command": "shuttle-mcp"
     }
   }
 }
 ```
 
-## You’re all set! ✅ 
-You should now be able to ask the Cursor agent Shuttle-related questions and get more detailed, informative answers—powered by your local Shuttle Docs MCP server. The Composer Agent will automatically use any MCP tools listed under Available Tools when relevant. To trigger Shuttle Docs MCP server tool intentionally, just tell the agent by referring to its name or description. We are working to make this even more powerful and would love to get your thoughts.
+```json Windsurf
+{
+  "mcpServers": {
+    "shuttle": {
+      "command": "shuttle-mcp"
+    }
+  }
+}
+```
+
+```json VSCode
+{
+  "servers": {
+    "shuttle": {
+      "type": "stdio",
+      "command": "shuttle-mcp"
+    }
+  }
+}
+```
+
+```json Claude Desktop
+{
+  "mcpServers": {
+    "shuttle": {
+      "command": "shuttle-mcp"
+    }
+  }
+}
+```
+
+</CodeGroup>
+
+### Configuration File Locations
+
+| IDE            | Configuration Path                                                                                                                          |
+| -------------- | ------------------------------------------------------------------------------------------------------------------------------------------- |
+| Cursor         | `~/.cursor/mcp.json` (global) or `.cursor/mcp.json` (project)                                                                               |
+| Windsurf       | `~/.codeium/windsurf/mcp_config.json`                                                                                                       |
+| VSCode         | User settings or `.vscode/mcp.json` (project)                                                                                               |
+| Claude Desktop | **macOS**: `~/Library/Application Support/Claude/claude_desktop_config.json`<br/>**Windows**: `%APPDATA%\Claude\claude_desktop_config.json` |
+
+## You're all set! 🚀
+
+Your AI coding assistant now has direct access to Shuttle's knowledge base and tooling. Whether you're deploying services, managing resources, or troubleshooting issues, your AI companion can provide contextual, accurate guidance powered by the official Shuttle documentation.
+
+The integration works seamlessly in the background - just code naturally and let your AI assistant tap into Shuttle's expertise when needed. Happy coding!
