--- a/examples/axum-static-files.mdx
+++ b/examples/axum-static-files.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Static Files"
-'og:title': "Static Files with Axum - Shuttle Docs"
+"og:title": "Static Files with Axum - Shuttle Docs"
 description: "This article walks you through setting up static files with Axum, a powerful Rust framework maintained by the Tokio-rs team."
 ---
 
@@ -19,19 +19,15 @@ shuttle init --from shuttle-hq/shuttle-examples --subfolder axum/static-files
 ## Code
 
 <CodeGroup>
-```rust src/main.rs
-use axum::{routing::get, Router};
-use tower_http::services::ServeDir;
 
-async fn hello_world() -> &'static str {
-    "Hello, world!"
-}
+```rust src/main.rs
+use axum::Router;
+use tower_http::services::ServeDir;
 
 #[shuttle_runtime::main]
 async fn main() -> shuttle_axum::ShuttleAxum {
-    let router = Router::new()
-        .route("/", get(hello_world))
-        .nest_service("/assets", ServeDir::new("assets"));
+    // ServeDir falls back to serve index.html when requesting a directory
+    let router = Router::new().fallback_service(ServeDir::new("assets"));
 
     Ok(router.into())
 }
@@ -40,12 +36,12 @@ async fn main() -> shuttle_axum::ShuttleAxum {
 ```html assets/index.html
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Static Files</title>
-    </head>
-    <body>
-        <p>This is an example of serving static files with Axum and Shuttle.</p>
-    </body>
+  <head>
+    <title>Static Files</title>
+  </head>
+  <body>
+    <p>This is an example of serving static files with Axum and Shuttle.</p>
+  </body>
 </html>
 ```
 
@@ -57,11 +53,11 @@ edition = "2021"
 publish = false
 
 [dependencies]
-axum = "0.7.3"
+axum = "0.8"
 shuttle-axum = "0.55.0"
 shuttle-runtime = "0.55.0"
 tokio = "1.28.2"
-tower-http = { version = "0.5.0", features = ["fs"] }
+tower-http = { version = "0.6", features = ["fs"] }
 ```
 
 ```toml Shuttle.toml
@@ -70,6 +66,7 @@ assets = [
     "assets",
 ]
 ```
+
 </CodeGroup>
 
 ## Usage
@@ -83,3 +80,4 @@ You can extend this example by adding more routes that serve other files.
 <Snippet file="other-frameworks.mdx" />
 
 <Snippet file="check-examples.mdx" />
+```
