--- a/guides/cli.mdx
+++ b/guides/cli.mdx
@@ -22,19 +22,19 @@ shuttle <command> --help
 | Command     | Description |
 | ----------- | ----------- |
 | init        | Generate a Shuttle project from a template |
-| run         | Run a Shuttle service locally |
-| deploy      | Deploy a Shuttle service |
-| deployment  | Manage deployments of a Shuttle service [aliases: depl] |
-| logs        | View logs of a Shuttle service |
-| project     | Manage projects on Shuttle [aliases: proj] |
+| run         | Run a project locally |
+| deploy      | Deploy a project |
+| deployment  | Manage deployments [aliases: depl] |
+| logs        | View build and deployment logs |
+| project     | Manage Shuttle projects [aliases: proj] |
 | resource    | Manage resources [aliases: res] |
 | certificate | Manage SSL certificates for custom domains [aliases: cert] |
 | account     | Show info about your Shuttle account [aliases: acc] |
-| login       | Login to the Shuttle platform |
+| login       | Log in to the Shuttle platform |
 | logout      | Log out of the Shuttle platform |
 | generate    | Generate shell completions and man page |
 | feedback    | Open an issue on GitHub and provide feedback |
-| upgrade     | Upgrade the cargo-shuttle binary |
+| upgrade     | Upgrade the Shuttle CLI binary |
 | help        | Print this message or the help of the given subcommand(s) |
 
 ## Cookbook / Cheat Sheet
@@ -66,7 +66,7 @@ For more tips, see [Local Run](/docs/local-run).
 - `shuttle project create`: Create a project on Shuttle.
 - `shuttle deploy`: Deploy the project to Shuttle.
 - `shuttle deploy --no-follow`: Don't poll deployment state. Alias: `--nf`.
-- `shuttle deploy --secrets <file>`: Use a non-default secrets file for this deployment. It must be located in the same folder that Secrets.toml should be in.
+- `shuttle deploy --secrets <file>`: Use a non-default secrets file for this deployment.
 
 ### Manage projects
 
@@ -102,12 +102,13 @@ All project-related commands can use:
 
 ### Shell completions
 
-Use `shuttle generate shell <shell>` with one of: bash, elvish, fish, powershell, zsh.
+Use `shuttle generate shell <shell>` with one of the supported shells: bash, elvish, fish, powershell, zsh.
 
 Example configuration for Zsh on Linux: add `eval "$(shuttle generate shell zsh)"` to `~/.zshrc`.
 
 ### Utility
 
 - `shuttle <command> --debug`: Turn on tracing output for Shuttle libraries. (WARNING: can print sensitive data)
+- `shuttle <command> --output json` to get the output from API calls in plain JSON.
 - `shuttle deploy --output-archive <path>`: Dump the deployment archive to disk instead of deploying it. Useful for debugging.
 - `shuttle logout --reset-api-key`: Log out and reset your account's API key.
