--- a/integrations/mcp-server.mdx
+++ b/integrations/mcp-server.mdx
@@ -18,7 +18,7 @@ The Shuttle MCP server supercharges your development workflow in two powerful wa
 
 ## Installation
 
-The Shuttle MCP server comes with the Shuttle CLI, make sure you have the [Shuttle CLI](https://docs.shuttle.dev/getting-started/installation) installed first.
+The Shuttle MCP server comes with the **Shuttle CLI (version 0.56 and later)**, make sure you have the [Shuttle CLI](https://docs.shuttle.dev/getting-started/installation) installed first.
 
 ## Configuration
 
