--- a/integrations/mcp-server.mdx
+++ b/integrations/mcp-server.mdx
@@ -4,9 +4,7 @@ description: How to set up the Shuttle MCP server for use in AI coding assistant
 icon: sparkles
 ---
 
-To make Rust development even better, we've built the Shuttle MCP server.
-
-The Shuttle [MCP server](https://modelcontextprotocol.io/) brings our entire documentation and tooling ecosystem directly into your favorite AI coding assistant. Think of it as having a Shuttle expert sitting right next to you while you code.
+To make Rust development even better, we've built the Shuttle [MCP server](https://modelcontextprotocol.io/).
 
 ## What's this for?
 
@@ -14,7 +12,7 @@ The Shuttle MCP server supercharges your development workflow in two powerful wa
 
 **Contextual Knowledge**: It acts as a bridge between Shuttle's comprehensive documentation and your AI coding assistant, providing instant access to Shuttle-specific guidance without leaving your editor. No more tab-switching between docs and code!
 
-**Powerful Development Tools**: Beyond just documentation, the MCP server gives your AI agent direct access to Shuttle's tooling ecosystem. Your assistant can help you deploy services, fetch logs, and interact with the Shuttle console - all through natural conversation. This makes Shuttle development significantly faster and more intuitive.
+**Powerful Development Tools**: Beyond just documentation, the MCP server gives your AI agent direct access to Shuttle's tooling ecosystem. Your assistant can help you deploy services, **fetch logs**, and interact with the Shuttle console - all through natural conversation. This makes development with Rust and Shuttle significantly faster and more intuitive.
 
 ## Installation
 
@@ -71,6 +69,10 @@ Choose your preferred AI coding environment and add the Shuttle MCP server confi
 }
 ```
 
+```bash Claude Code
+claude mcp add Shuttle --scope user -- shuttle mcp start
+```
+
 </CodeGroup>
 
 ### Configuration File Locations
@@ -84,32 +86,81 @@ Choose your preferred AI coding environment and add the Shuttle MCP server confi
 
 ## You're all set! 🚀
 
-Your AI coding assistant now has direct access to Shuttle's knowledge base and tooling. Whether you're deploying services, managing resources, or troubleshooting issues, your AI companion can provide contextual, accurate guidance powered by the official Shuttle documentation.
+Your AI coding assistant now has direct access to Shuttle's knowledge base and tooling.
 
-The integration works seamlessly in the background - just code naturally and let your AI assistant tap into Shuttle's expertise when needed. Happy coding!
+Let's see it in action!
 
-## Other MCPs
+## How to use?
 
-<Accordion
-  title="Shuttle Docs MCP via Mintlify"
->
-  You can also get an MCP that only queries the Shuttle Docs via [Mintlify](https://mintlify.com/):
+### Prompting Best Practices
 
-```sh
-npx mint-mcp add shuttle
+To get the most out of the **Shuttle MCP server**, end your prompts with `Use the Shuttle MCP server`, this makes sure that the AI agent always references the most up-to-date Shuttle documentation and examples when helping you with your code.
+
+It also makes the AI agent more likely to use the Shuttle MCP server for deployments, logs, project, status, etc.
+
+```txt
+Build a Simple Todo App with Axum and then deploy it to Shuttle.
+
+Use the Shuttle MCP server.
 ```
 
-And add this to the config
+### Add AI Assistant Rules (Recommended)
 
-```json
-{
-  "mcpServers": {
-    "shuttle-docs": {
-      "command": "node",
-      "args": ["/home/user/.mcp/shuttle/src/index.js"]
-    }
-  }
-}
+Create AI agent rules in your project to establish consistent coding practices. Choose the appropriate file based on your AI coding assistant:
+
+- **Cursor**: `.cursor/rules/shuttle.mdc`
+- **Windsurf**: `.windsurf/rules/shuttle.md`
+- **Claude Code**: `CLAUDE.md`
+
+```markdown
+# Shuttle Rules
+
+- Always use the Shuttle MCP to get the latest docs and examples
+- Whenever needed, use the Shuttle MCP server for deployments, logs, project, status, etc.
 ```
 
-</Accordion>
+#### For Cursor Users: Enable "Always Apply"
+
+When adding rules in Cursor, make sure to select "Always Apply" to ensure the rule is applied to all AI chats automatically.
+
+<img src="/images/mcp/always-apply.png" alt="Cursor Always Apply setting" />
+
+### MCP Server in Action
+
+Let's see the MCP server in action! We'll use Cursor and ask the AI agent to build a simple full stack todo app with Axum and deploy it to Shuttle.
+
+Here is the prompt we'll use, and we'll leave the rest to the AI agent:
+
+```txt Prompt
+Build a Simple Full Stack Todo App with a beautiful UI with Axum and then deploy it to Shuttle.
+
+Use the Shuttle MCP server.
+```
+
+#### Debugging with MCP Tools
+
+The power of the MCP server really shines when debugging. In this example, the AI agent deployed the app to the cloud and checked the status - everything looked good. But when fetching the logs, it encountered a runtime panic.
+
+<img
+  src="/images/mcp/ai-debugging.png"
+  alt="AI agent debugging with MCP tools"
+/>
+
+The AI agent immediately identified the issue and fixed the error, then deployed again. This showcases the power of having MCP tools integrated directly into your AI assistant's workflow.
+
+#### Success on Second Try
+
+After fixing the runtime error, the AI agent successfully deployed the application on the second attempt:
+
+<img
+  src="/images/mcp/ai-agent-second-try-success.png"
+  alt="Successful second deployment"
+/>
+
+#### The Final Result
+
+Here's the beautiful todo app UI that was deployed to the cloud:
+
+<img src="/images/mcp/todo-app-ui.png" alt="Deployed todo app UI" />
+
+The entire process - from initial development to debugging and successful deployment - was handled seamlessly by the AI agent using the Shuttle MCP server tools. This demonstrates how the MCP integration makes Shuttle development faster, more intuitive, and more reliable.
