AI agent search docs MCP tool call

--- a/integrations/mcp-server.mdx
+++ b/integrations/mcp-server.mdx
@@ -137,6 +137,17 @@ Build a Simple Full Stack Todo App with a beautiful UI with Axum and then deploy
 Use the Shuttle MCP server.
 ```
 
+#### AI Agent Accessing Latest Documentation
+
+The AI agent immediately starts by searching through Shuttle's latest documentation using the MCP server. This ensures it has access to the most up-to-date information about Shuttle's features, best practices, and examples before beginning development.
+
+<img
+  src="/images/mcp/ai-searching-docs.png"
+  alt="AI agent searching Shuttle documentation via MCP server"
+/>
+
+As you can see, the AI agent proactively searches for relevant documentation sections, ensuring it builds the todo app using current Shuttle patterns and recommendations.
+
 #### Debugging with MCP Tools
 
 The power of the MCP server really shines when debugging. In this example, the AI agent deployed the app to the cloud and checked the status - everything looked good. But when fetching the logs, it encountered a runtime panic.
