img tags removed

--- a/integrations/mcp-server.mdx
+++ b/integrations/mcp-server.mdx
@@ -123,7 +123,7 @@ Create AI agent rules in your project to establish consistent coding practices. 
 
 When adding rules in Cursor, make sure to select "Always Apply" to ensure the rule is applied to all AI chats automatically.
 
-<img src="/images/mcp/always-apply.png" alt="Cursor Always Apply setting" />
+![Cursor Always Apply setting](/images/mcp/always-apply.png)
 
 ### MCP Server in Action
 
@@ -141,10 +141,7 @@ Use the Shuttle MCP server.
 
 The AI agent immediately starts by searching through Shuttle's latest documentation using the MCP server. This ensures it has access to the most up-to-date information about Shuttle's features, best practices, and examples before beginning development.
 
-<img
-  src="/images/mcp/ai-searching-docs.png"
-  alt="AI agent searching Shuttle documentation via MCP server"
-/>
+![AI agent searching Shuttle documentation via MCP server](/images/mcp/ai-searching-docs.png)
 
 As you can see, the AI agent proactively searches for relevant documentation sections, ensuring it builds the todo app using current Shuttle patterns and recommendations.
 
@@ -152,10 +149,7 @@ As you can see, the AI agent proactively searches for relevant documentation sec
 
 The power of the MCP server really shines when debugging. In this example, the AI agent deployed the app to the cloud and checked the status - everything looked good. But when fetching the logs, it encountered a runtime panic.
 
-<img
-  src="/images/mcp/ai-debugging.png"
-  alt="AI agent debugging with MCP tools"
-/>
+![AI agent debugging with MCP tools](/images/mcp/ai-debugging.png)
 
 The AI agent immediately identified the issue and fixed the error, then deployed again. This showcases the power of having MCP tools integrated directly into your AI assistant's workflow.
 
@@ -163,15 +157,12 @@ The AI agent immediately identified the issue and fixed the error, then deployed
 
 After fixing the runtime error, the AI agent successfully deployed the application on the second attempt:
 
-<img
-  src="/images/mcp/ai-agent-second-try-success.png"
-  alt="Successful second deployment"
-/>
+![Successful second deployment](/images/mcp/ai-agent-second-try-success.png)
 
 #### The Final Result
 
 Here's the beautiful todo app UI that was deployed to the cloud:
 
-<img src="/images/mcp/todo-app-ui.png" alt="Deployed todo app UI" />
+![Deployed todo app UI](/images/mcp/todo-app-ui.png)
 
 The entire process - from initial development to debugging and successful deployment - was handled seamlessly by the AI agent using the Shuttle MCP server tools. This demonstrates how the MCP integration makes Shuttle development faster, more intuitive, and more reliable.
