--- a/integrations/mcp-server.mdx
+++ b/integrations/mcp-server.mdx
@@ -166,3 +166,5 @@ Here's the beautiful todo app UI that was deployed to the cloud:
 ![Deployed todo app UI](/images/mcp/todo-app-ui.png)
 
 The entire process - from initial development to debugging and successful deployment - was handled seamlessly by the AI agent using the Shuttle MCP server tools. This demonstrates how the MCP integration makes Shuttle development faster, more intuitive, and more reliable.
+
+We can't wait to see what amazing projects you create with the Shuttle MCP server, and we'd love to hear your feedback!
