--- a/examples/axum-websockets.mdx
+++ b/examples/axum-websockets.mdx
@@ -9,7 +9,7 @@ This example shows how to use a WebSocket to show the live status of the Shuttle
 
 There are a few routes available:
 - `/` - the homepage route where you can find the `index.html` page.
-- `/ws` - the route that handles websockets.
+- `/websocket` - the route that handles websockets.
 
 You can clone the example below by running the following (you'll need `shuttle` CLI installed):
 
