improve scaling doc

--- a/docs/scaling.mdx
+++ b/docs/scaling.mdx
@@ -3,20 +3,21 @@ title: Scaling
 description: Adjusting the computational resources allocated to your application
 icon: arrows-up-down
 ---
-At Shuttle, you can adjust the vCPU and memory resources allocated to your application’s compute environment. The level of scaling available depends on your [Account Tier](/docs/account#account-tiers). This functionality enables you to **vertically scale** your application to better suit your specific performance requirements and workload demands.
+
+At Shuttle, you can adjust the vCPU and memory resources allocated to your application’s compute environment.
+This functionality enables you to **vertically scale** your application to better suit your specific performance requirements and workload demands.
 
 <Warning>
-Changing the compute type or instance size of your application will result in additional charges. These are calculated according to our [usage-based pricing](/pricing/billing#usage-based-pricing) model. Please ensure you review the pricing details before making adjustments.
+Changing the instance size of your project is limited to the Pro tier and above, and will result in additional charges. These are calculated according to our [usage-based pricing](/pricing/billing#usage-based-pricing) model. Please ensure you review the pricing details before making adjustments.
 </Warning>
 
 ### Example
 
-The example below illustrates how to configure your application to use a **medium** instance size:
+The example below illustrates how to configure your application to use a **medium** instance size using **<Tooltip tip="Provisioning resources directly from your code, instead of having to deal with complex consoles and yaml files">Infrastructure from Code</Tooltip>**:
 
 ```rust main.rs
 #[shuttle_runtime::main(instance_size = "m")]
-async fn main(
-) -> shuttle_axum::ShuttleAxum {
+async fn main() -> shuttle_axum::ShuttleAxum {
     // Your application logic here
 }
 ```
@@ -25,13 +26,13 @@ async fn main(
 
 The table below lists the available `instance_size` values, along with the corresponding instance type and minimum required Account Tier:
 
-| Instance Size | Value | Account Tier |
-| --- | --- | --- |
-| **Basic** | `xs` | Community+ |
-| **Small** | `s` | Pro+ |
-| **Medium** | `m` | Pro+ |
-| **Large** | `l` | Pro+ |
-| **X Large** | `xl` | Pro+ |
-| **XX Large** | `xxl` | Growth+ |
+| Instance Size | Value | vCPU | Memory (GB) | Account Tier |
+| --- | --- | --- | --- | --- |
+| **Basic** (default) | `xs` | 0.25 | 0.5 | Community+ |
+| **Small** | `s` | 0.5 | 1 | Pro+ |
+| **Medium** | `m` | 1 | 2 | Pro+ |
+| **Large** | `l` | 2 | 4 | Pro+ |
+| **X Large** | `xl` | 4 | 8 | Pro+ |
+| **XX Large** | `xxl` | 8 | 16 | Growth+ |
 
 _Ensure your selected instance size aligns with your application's current and anticipated workload._
