add back rds page

--- a/resources/resources.mdx
+++ b/resources/resources.mdx
@@ -11,11 +11,10 @@ This section covers the resources currently supported by Shuttle. In broad terms
 - enables quick prototyping, there is no need for extensive setup, management consoles/tools, etc.
 
 ## Resources
-{/*
-### Amazon Web Services Relational Database Service (AWS RDS)
+
+### AWS Relational Database Service (RDS)
 
 This plugin allows applications to leverage AWS RDS for database needs, instead of a shared database. This will result in improved availability and reliability given the "managed" nature of the service and its increased resources. It can be a good choice if the database backing the application requires the performance increase that results from improved isolation.
-*/}
 
 ### Shared Databases
 
