--- a/resources/shuttle-aws-rds.mdx
+++ b/resources/shuttle-aws-rds.mdx
@@ -40,7 +40,8 @@ If you require a different configuration, please contact us. We can provision an
 
 ## Usage
 
-Start by adding `shuttle-aws-rds` to the dependencies for your service.
+Please [contact us](/support/support) to enable RDS resources for your account.
+Then, add the `shuttle-aws-rds` dependency.
 Each type of database is behind its own feature flag and macro attribute path.
 
 | Engine   | Feature flag | Attribute path |
