--- a/resources/shuttle-shared-db.mdx
+++ b/resources/shuttle-shared-db.mdx
@@ -15,7 +15,7 @@ The Shuttle Shared Postgres cluster is RDS-based and uses Postgres version 16. C
 
 ## Usage
 
-Start by adding `shuttle-shared-db` to the dependencies for your service.
+Start by adding the `shuttle-shared-db` dependency.
 Each type of shareable database is behind its own feature flag and macro attribute path.
 
 | Engine   | Feature flag | Attribute path |
