--- a/docs/account.mdx
+++ b/docs/account.mdx
@@ -26,15 +26,15 @@ Pro Trial is included by default at signup, find out more [here](https://www.shu
 ## API Key
 
 A Shuttle account has a single Shuttle API key.
+The key can be retrieved in the Console's [Account Overview](https://console.shuttle.dev/account/overview).
 
 The CLI command `shuttle login` automatically enters the API Key into the CLI configuration after confirming in the browser.
 
-The key can also be retrieved in the Console's [Account Overview](https://console.shuttle.dev/account/overview).
-
 ### Reset API Key
 
-To reset the API Key, be logged in and use `shuttle logout --reset-api-key`.
-You can then log out of the Shuttle Console and get the new key when logging back in.
+To reset the API Key, navigate to the Console's [Account Overview](https://console.shuttle.dev/account/overview).
+
+You can also use `shuttle logout --reset-api-key` followed by `shuttle login`.
 
 ## Delete account
 
