--- a/docs/deployment-environment.mdx
+++ b/docs/deployment-environment.mdx
@@ -29,9 +29,10 @@ If the new deployment fails to become healthy, it will be retried 3 times while 
 
 ### HTTPS traffic
 
-HTTPS traffic is proxied to your app on the project's default subdomain and any [custom domains]() that have been added.
-
+HTTPS traffic is proxied to your app on the project's default subdomain and any [custom domains](/docs/domain-names) that have been added.
 The proxy sets the `X-Forwarded-For` HTTP header on incoming requests to the remote IP address of the request.
+
+On the Growth tier, a dedicated Application Load Balancer is included, which provides better performance, reliabilty and isolation.
 
 ## Environment variables
 
